2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/ls.c (grub_cmd_ls): Accept multiple files.

2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_vprintf): Use va_copy when necessary.
	(grub_xvasprintf): Likewise.

2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c (main): Call hostfs_init only after init_all.

2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c (append_menu_entry): Don't rely on
	args ending with NULL.

2010-09-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/xzembed/xz_dec_stream.c (xz_dec_reset): Preserve context
	pointer.

2010-09-11  Szymon Janc <szymon@janc.net.pl>

	* grub-core/commands/lsacpi.c (grub_cmd_lsacpi): Fix prototype.

2010-09-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Shutdown using ACPI.

	* grub-core/Makefile.core.def (halt): Add commands/acpihalt.c on i386-pc.
	* grub-core/commands/acpihalt.c: New file.
	* grub-core/commands/i386/pc/halt.c (grub_cmd_halt): Call grub_acpi_halt.
	* include/grub/acpi.h (grub_acpi_fadt): New member pm1a.
	(grub_acpi_halt): New proto.
	(GRUB_ACPI_SLP_EN): New const.
	(GRUB_ACPI_SLP_TYP_OFFSET): Likewise.
	(GRUB_ACPI_OPCODE_*): New enum.
	(GRUB_ACPI_EXTOPCODE_*): Likewise.

2010-09-11  Tristan Gingold  <gingold@free.fr>
2010-09-11  Robert Millan  <rmh.grub@aybabtu.com>
2010-09-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* commands/lsacpi.c: New file.
	* grub-core/Makefile.core.def (lsacpi): New module.
	* include/grub/acpi.h (GRUB_ACPI_FADT_SIGNATURE): New definition.
	(GRUB_ACPI_MADT_SIGNATURE): Likewise.
	(grub_acpi_madt_entry_header): New struct.
	(grub_acpi_madt): Likewise.
	(grub_acpi_madt_entry_interrupt_override): Likewise.
	(grub_acpi_madt_entry_sapic): Likewise.
	(grub_acpi_madt_entry_lsapic): Likewise.
	(grub_acpi_madt_entry_platform_int_source): Likewise.
	* include/grub/types.h (PRIxGRUB_UINT32_T): New definition.